log
Thu 14 Sep 2023 04:16:26 AM UTC: 
 tests:  1|8
total_score: 0/70
a4a0b07
Thu 14 Sep 2023 04:33:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:13: error: unused variable ‘mapa’ [-Werror=unused-variable]
   40 |   TreeMap * mapa=(TreeMap*)malloc(sizeof(TreeMap));
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
6b23ae6
Thu 14 Sep 2023 04:36:27 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7c2261c
Thu 14 Sep 2023 04:49:08 AM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   86 |       return tree->current;
      |              ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb91dd8
Thu 14 Sep 2023 04:53:43 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
205af0f
Thu 14 Sep 2023 04:54:09 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
363a750
